@@ -16,7 +16,7 @@
 		{
 			"importpath": "git.schwanenlied.me/yawning/hpkp.git",
 			"repository": "https://git.schwanenlied.me/yawning/hpkp.git",
-			"revision": "47939e66e9ecea8452416d8695e80eed366efd7a",
+			"revision": "30623e5213bbab82a5ac7aae317c7e91e8ddf998",
 			"branch": "master"
 		},
 		{
